syntax = "proto3";

package pb;

option go_package = "barbershop/src/pb/barber";

message BarberShopServices {
    string id = 1;
    string category_id = 2;
    string barber_shop_chain_id = 3;
    string barber_shop_id = 4;
    int32 gender_id = 5;
    string name = 6;
    int32 timer = 7;
    float price = 8;
    string description = 9;
    string image = 10;
}